--- a/proj_1/package.json
+++ b/proj_1/package.json
@@ -24,6 +24,10 @@
   },
   "homepage": "https://github.com/STG-247/ms_with_node#readme",
   "dependencies": {
-    "seneca": "^3.30.0"
+    "body-parse": "^0.1.0",
+    "express": "^4.18.2",
+    "seneca": "^3.30.0",
+    "seneca-web": "^2.2.2",
+    "seneca-web-adapter-express": "^1.2.1"
   }
 }
