--- a/proj_1/package.json
+++ b/proj_1/package.json
@@ -2,7 +2,7 @@
   "name": "proj_1",
   "version": "1.0.0-SNAPSHOT",
   "description": "MS with NodeJS project 1",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/STG-247/ms_with_node#readme",
   "dependencies": {
-    "body-parse": "^0.1.0",
     "express": "^4.18.2",
     "seneca": "^3.30.0",
     "seneca-web": "^2.2.2",
